add design home page

--- a/src/app/components/c3/c3.component.html
+++ b/src/app/components/c3/c3.component.html
@@ -1,1 +1,25 @@
-<p>c3 works!</p>
+<div class="flex flex-col items-center justify-center gap-2 border p-7 flex-1">
+  <input
+    class="border p-2 rounded-lg"
+    type="text"
+    placeholder="Ingrese nombre tarea"
+    [(ngModel)]="nombre"
+    required
+  />
+  <textarea
+    class="border p-2 rounded-lg"
+    name=""
+    id=""
+    cols="30"
+    rows="5"
+    placeholder="Ingresa Descripción"
+    [(ngModel)]="descripcion"
+    required
+  ></textarea>
+  <button
+    class="bg-blue-500 py-2 px-4 rounded-lg text-white"
+    (click)="guardar()"
+  >
+    Guardar
+  </button>
+</div>
