--- a/src/app/components/c4/c4.component.html
+++ b/src/app/components/c4/c4.component.html
@@ -1,1 +1,9 @@
-<p>c4 works!</p>
+<div class="flex flex-col items-center gap-2 border p-7 flex-1 w-64 h-72">
+  <h2>Lista de tareas</h2>
+
+  <div>
+    <ul class="list-disc">
+      <li *ngFor="let tarea of tareas">{{ tarea.nombre }}</li>
+    </ul>
+  </div>
+</div>
