--- a/src/app/components/c1/c1.component.html
+++ b/src/app/components/c1/c1.component.html
@@ -1,1 +1,8 @@
-<p>c1 works!</p>
+<div class="w-full h-14 bg-gray-300 flex gap-3 items-center px-4">
+  <img
+    class="w-10"
+    src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cf/Angular_full_color_logo.svg/375px-Angular_full_color_logo.svg.png"
+    alt=""
+  />
+  <h1>App tareas</h1>
+</div>
