--- a/src/app/components/c3/c3.component.html
+++ b/src/app/components/c3/c3.component.html
@@ -1,10 +1,16 @@
-<div class="flex flex-col items-center justify-center gap-2 border p-7 flex-1">
+<form
+  class="flex flex-col items-center justify-center gap-2 border p-7 flex-1"
+  novalidate
+  (ngSubmit)="guardar(); formtarea.reset()"
+  #formtarea="ngForm"
+>
   <input
     class="border p-2 rounded-lg"
     type="text"
     placeholder="Ingrese nombre tarea"
     [(ngModel)]="nombre"
     required
+    name="nombre"
   />
   <textarea
     class="border p-2 rounded-lg"
@@ -15,11 +21,14 @@
     placeholder="Ingresa Descripción"
     [(ngModel)]="descripcion"
     required
+    name="descripcion"
   ></textarea>
   <button
+    type="submit"
     class="bg-blue-500 py-2 px-4 rounded-lg text-white"
-    (click)="guardar()"
+    [disabled]="!formtarea.valid"
+    [ngClass]="{ 'bg-blue-300': !formtarea.valid }"
   >
     Guardar
   </button>
-</div>
+</form>
