update design home page

--- a/src/app/components/c2/c2.component.html
+++ b/src/app/components/c2/c2.component.html
@@ -1,5 +1,5 @@
 <div
-  class="w-full h-14 bg-gray-300 flex gap-3 items-center px-4 justify-center"
+  class="w-full h-14 bg-red-500 text-white flex gap-3 items-center px-4 justify-center"
 >
   <h2>© Copyright 2022</h2>
 </div>
