--- a/src/app/components/c4/c4.component.html
+++ b/src/app/components/c4/c4.component.html
@@ -1,7 +1,9 @@
-<div class="flex flex-col items-center gap-2 border p-7 flex-1 w-64 h-72">
-  <h2>Lista de tareas</h2>
+<div
+  class="flex flex-col items-center justify-start gap-2 border border-gray-600 rounded-lg p-7 flex-1 bg-white h-full"
+>
+  <h2 class="font-bold text-xl">Lista de tareas</h2>
 
-  <div>
+  <div class="border border-gray-600 p-6 px-8 rounded-sm mt-4">
     <ul class="list-disc">
       <li *ngFor="let tarea of tareas">{{ tarea.nombre }}</li>
     </ul>
