--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,10 +1,13 @@
 <div class="flex flex-col h-full">
   <app-c1></app-c1>
-  <div
-    class="flex justify-center items-center gap-32 my-10 flex-wrap flex-grow"
-  >
-    <app-c3 (responseTarea)="guardarTarea($event)"></app-c3>
-    <app-c4 [tareas]="tareas"></app-c4>
+  <div class="flex justify-center items-center py-10 flex-grow bg-zinc-800">
+    <div class="flex gap-16 flex-wrap">
+      <app-c3
+        (responseTarea)="guardarTarea($event)"
+        class="flex-1 mx-4"
+      ></app-c3>
+      <app-c4 [tareas]="tareas" class="flex-1 mx-4"></app-c4>
+    </div>
   </div>
   <app-c2></app-c2>
 </div>
